deny .htaccess for credentials.bash
(cherry picked from commit e137b9e578f843e1c841cb6276e7b7748ace380d)

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-<Files run.bash>
+<FilesMatch run.bash|credentials.bash>
   order allow,deny
   deny from all
   require all denied
-</Files>
+</FilesMatch>
